--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
     <string name="title_activity_actividad_tabbed">ActividadTabbed</string>
+    <string name="title_activity_actividad_mapas">Map</string>
 </resources>
